Prepare for Java 25 with cipher suites that will be disabled.